# cmdvideoplayer

./: .gitignore  README.md
backend/: main.py
tindercmd/: Cargo.toml
tindercmd/src/: main.rs
