[package]
name = "tindercmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
image = { version = "0.24.3" }
ncurses = {version = "5.101.0"}
rand = {version = "0.8.5"}